@@ -11,9 +11,9 @@ topic-tags: deploying
 discoiquuid: e48cc0ed-688c-44c8-b6d6-5f3c8593a295
 docset: aem65
 exl-id: 3df0662a-0768-4b56-8b94-c517657b4bd9
-source-git-commit: 1cef6f87fa66fd78d439c23e6ac907f9531b8fd6
+source-git-commit: bb8dbb9069c4575af62a4d0b21195cee75944fea
 workflow-type: tm+mt
-source-wordcount: '1821'
+source-wordcount: '1808'
 ht-degree: 3%
 
 ---
@@ -177,16 +177,10 @@ AEM軟體套件提供兩種格式：
 
 1. 要在GUI環境中啟動實例，只需按兩下 **`cq-quickstart-6.5.0.jar`** 檔案。
 
-   或者，您也可以從命令列啟動AEM。 對於32位Java VM，請輸入以下內容：
+   或者，您也可以從命令列啟動AEM:
 
    ```shell
        java -Xmx1024M -jar cq-quickstart-6.5.0.jar
-   ```
-
-   對於64位VM，請輸入：
-
-   ```shell
-       java -XX:MaxPermSize=256m -Xmx1024M -jar cq-quickstart-6.5.0.jar
    ```
 
 AEM需要幾分鐘的時間來解壓縮jar檔案、安裝自己，然後啟動。 上述程式會產生：
